# health-care-plan-generator

./: .gitignore  DockerFile  README.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  training_data.pkl  vercel.json
data/: care_instruction_scorecard.json  care_plan_instructions.json
src/: App.tsx  index.css  main.tsx
src/care_plan/: api.py
src/care_plan/crews/care_plan_generation/: care_plan_generation_crew.py
src/care_plan/crews/care_plan_generation/config/: agents.yaml  tasks.yaml
src/care_plan/crews/prompt_generation/: prompt_generation_crew.py
src/care_plan/crews/prompt_generation/config/: agents.yaml  tasks.yaml
src/components/: CarePlanForm.tsx  PromptForm.tsx
