[project]
name = "care_plan"
version = "0.1.0"
description = "care_plan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "google-generativeai>=0.8.4"
]

[project.scripts]
kickoff = "care_plan.main:kickoff"
plot = "care_plan.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
